--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -3,7 +3,15 @@
   <% } %>
 </head>
 <body>
-  <nav>
+    <nav>
+      <i class="fas fa-meteor fa-2x"></i>
+      <a href="/allCards">All Cards</a>
+      <a href="/newreadings">Get a New Rading</a>
+      <a href="/favoriteCards">My Favorite Cards</a>
+      <a href="/pastReadings">My Past Readings</a>
+      <a href="/profile" >My Profile</a>
+    </nav>
+
     <% if (user) { %>
       <a href="/auth/logout">
         <button type="submit">Logout</button>
@@ -15,4 +23,4 @@
         </button>
       </a>
     <% } %>
-  </nav>
+ 
