--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,10 +6,10 @@
     <nav>
       <i class="fas fa-meteor fa-2x"></i>
       <a href="/allCards">All Cards</a>
-      <a href="/newreadings">Get a New Rading</a>
+      <a href="/newReading">Get a New Rading</a>
       <a href="/favoriteCards">My Favorite Cards</a>
       <a href="/pastReadings">My Past Readings</a>
-      <a href="/profile" >My Profile</a>
+      <a href="/profile">My Profile</a>
     </nav>
 
     <% if (user) { %>
