--- a/views/allCards/index.ejs
+++ b/views/allCards/index.ejs
@@ -2,8 +2,12 @@
 <%- include('../partials/nav') %>
 
 <h1> 78 Cards </h1>
-
+<h1><%= title %></h1>
 <section> 
+<div>
+
+</div>
+
 <img src="/images/cards/c01.jpg" alt="">
 <img src="/images/cards/c02.jpg" alt="">
 <img src="/images/cards/c03.jpg" alt="">
