--- a/views/allCards/index.ejs
+++ b/views/allCards/index.ejs
@@ -1,12 +1,15 @@
 <%- include('../partials/html-head') %>
 <%- include('../partials/nav') %>
-
-<h1> 78 Cards </h1>
-<h1><%= title %></h1>
-<section> 
 <div>
-
+<h1> 78 Cards</h1>
+<h1><%= title %></h1>
+<div>
+<% for( let index = 0; cards.length < 10; index++ ) { %>
+  <li><%= cards[index].name %></li>
+<% } %>
 </div>
+
+<section> 
 
 <img src="/images/cards/c01.jpg" alt="">
 <img src="/images/cards/c02.jpg" alt="">
@@ -91,4 +94,5 @@
 
 
 </section>
+</div>
 <%- include('../partials/footer') %>
