--- a/views/newReading/result.ejs
+++ b/views/newReading/result.ejs
@@ -21,7 +21,7 @@
       </form>
       <label>
         Result:
-        <input type="text" result="result autocomplete="off">
+        <input type="text" result="result" autocomplete="off">
       </label>
       <button type="save">Save</button>
     <% } %>
