--- a/views/newReading/result.ejs
+++ b/views/newReading/result.ejs
@@ -1,30 +1,64 @@
-<%- include('../partials/html-head') %>
-<%- include('../partials/nav') %>
+<%- include('../partials/html-head') %> <%- include('../partials/nav') %>
 
-<section> 
-    <h1>Enter your Question of the Day</h1>
-    <p> Instructions:
-        1. Find a quiet place and think about a yes or no question
-        2. Enter your question
-        3. Submit by clickling on the Shuffle button
-        4. Save your reading
-    </p>
+<section>
+  <h1>Enter your Question of the Day</h1>
+  <p>
+    Instructions: 1. Find a quiet place and think about a yes or no question 2.
+    Enter your question 3. Submit by clickling on the Shuffle button 4. Save
+    your reading
+  </p>
 
-    <% if (user) { %>
-      <h2>Enter your question here</h2>
-      <form action="/api/cards/new" method="POST">
-        <label>
-          Question:
-          <input type="text" question="question" autocomplete="off">
-        </label>
-        <button type="submit">Shuffle</button>
-      </form>
-      <label>
-        Result:
-        <input type="text" result="result" autocomplete="off">
-      </label>
-      <button type="save">Save</button>
-    <% } %>
+  <% if (user) { %>
+  <h2><%=question %></h2>
+  <br />
+
+  <img src="/images/cards/<%= randomCard1.img %>" />
+  <h3><%= randomCard1.name %></h3>
+  <p><%= randomCard1.number %></p>
+  <p><%= randomCard1.arcana %></p>
+  <p><%= randomCard1.suit %></p>
+  <p><%= randomCard1.fortune_telling %></p>
+  <br />
+
+  <img src="/images/cards/<%= randomCard2.img %>" />
+  <h3><%= randomCard2.name %></h3>
+  <p><%= randomCard2.number %></p>
+  <p><%= randomCard2.arcana %></p>
+  <p><%= randomCard2.suit %></p>
+  <p><%= randomCard2.fortune_telling %></p>
+  <br />
+  
+  <img src="/images/cards/<%= randomCard3.img %>" />
+  <h3><%= randomCard3.name %></h3>
+  <p><%= randomCard3.number %></p>
+  <p><%= randomCard3.arcana %></p>
+  <p><%= randomCard3.suit %></p>
+  <p><%= randomCard3.fortune_telling %></p>
+  <br />
+
+  <form action="/newReading/addComment" method="POST">
+    <input type="text" name="profileId" value="<%= user.profile._id %>" hidden>
+    <input type="text" name="question" value="<%= question%>" hidden>
+    <input type="text" name="img" value="<%= randomCard1.img %>" hidden>
+    <input type="text" name="name" value="<%= randomCard1.name %>" hidden>
+    <input type="text" name="number" value="<%= randomCard1.number %>" hidden>
+    <input type="text" name="img" value="<%= randomCard2.img %>" hidden>
+    <input type="text" name="name" value="<%= randomCard2.name %>" hidden>
+    <input type="text" name="number" value="<%= randomCard2.number %>" hidden>
+    <input type="text" name="img" value="<%= randomCard3.img %>" hidden>
+    <input type="text" name="name" value="<%= randomCard3.name %>" hidden>
+    <input type="text" name="number" value="<%= randomCard3.number %>" hidden>
+    
+    <label>
+      Comments:
+      <input required type="text" name="comment" result="result" autocomplete="off" />
+    </label>
+    <br />
+    <button type="submit">Save</button>
+  </form>
+  <% } %>
 </section>
 
+
+  
 <%- include('../partials/footer') %>
