--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -5,6 +5,7 @@
 <body>
     <nav>
       <i class="fas fa-meteor fa-2x"></i>
+      <a href="/allcards">All Cards</a>
       <a href="/newReading">Get a New Rading</a>
       <a href="/pastReadings">My Past Readings</a>
       <a href="/profile">My Profile</a>
