--- a/views/newReading/index.ejs
+++ b/views/newReading/index.ejs
@@ -1,19 +1,20 @@
 <%- include('../partials/html-head') %> <%- include('../partials/nav') %>
 
 <section>
-  <h1>Enter your Question of the Day</h1>
+  <h1>Enter your question 🔮</h1>
   <p>
-    Instructions: 1. Find a quiet place and think about a yes or no question 2.
-    Enter your question 3. Submit by clickling on the Shuffle button 4. Save
-    your reading
+    Instructions: 
+    1. Find a quiet place and think about a yes or no question 
+    2. Enter your question 
+    3. Submit by clickling on the Shuffle button 
+    4. Save your reading
   </p>
   <% if (user) { %>
-  <h2>Enter your question here</h2>
   <form action="/newReading/result" method="POST">
     <label>
       Question:
-      <input type="text" name="question" autocomplete="off">
-    </label>
+      <textarea rows="4" cols="50" type="text" name="question" autocomplete="off" required> 
+      </textarea>
     <button type="submit">Shuffle</button>
   </form>
   <% } %>
