--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,15 +22,21 @@ body {
   /* Use a system font, if none are available use an available sans-sarif font */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
         Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-  margin: 0;
+  margin: 50px;
 }
 
 nav {
   background-color: white;
-  font-size: 1.6rem;
+  font-size: 2.2rem;
   display: flex;
   justify-content: center;
+  
 }
+
+nav a:hover {
+  background-color: orange;
+}
+
 
 main {
   display: flex;
@@ -40,9 +46,39 @@ main {
 }
 
 h1 {
-  font-size: 3.6rem;
+  font-size: 3.2rem;
 }
+
+h2, h3 {
+  font-size: 3.0rem;
+}
+ 
+p {
+  font-size: 2.6rem
+ }
 
 form {
   display: inline;
 }
+
+label {
+  font-size: 2.0rem;
+  display: column;
+}
+
+element {
+  display: column;
+}
+
+div {
+  display: inline-flex;
+  column-gap: 25%;
+  justify-content: space-between;
+  align-items: center;
+  
+}
+
+li {
+  font-size: 2.6rem;
+}
+
