--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,11 +11,10 @@
 <% } %>
 
 <main>
-  <h2>About the Classic Rider-Waite Tarot Deck</h2>
+  <h2>About the Rider-Waite Tarot Deck 🔮</h2>
   <p> There are so many decks of tarot cards in the market nowadays, and each serves its own purposes. The classis Rider-Waite Tarot Deck, in my humble opinion, is the most comprehensive system in terms of design, story-telling, and astrological importance. This deck of card was originated in the mid-15th century in Northern Italy as game cards. Only more recently did it evolve into a tool of fortune telling and divination as most people know it today. There is a standard set of interpretation for each card, but each reader is encouraged to attached his/her own interpretations. In fact, if well-trained, everyone can design a deck of tarot card that can accurately tell stories.</p>
-  <h3>Why does it work?</h3>
+  <h3>Why does it work? 🔮</h3>
   <p>When a practitioner formulates a question, the card drawn reflects a frequency that aligns with the frequency of practitioner's question. The same principal applies to other fortune telling methods and tools in other cultures. </p>
 </main>
-
 
 <%- include('./partials/footer') %>
