--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <%- include('./partials/html-head') %>
+<link rel="stylesheet" href="/stylesheets/index.css">
 <%- include('./partials/nav') %>
 
 <% if (user?.profile.avatar) { %>
@@ -12,7 +13,7 @@
 
 <main>
   <h2>About the Rider-Waite Tarot Deck 🔮</h2>
-  <p> There are so many decks of tarot cards in the market nowadays, and each serves its own purposes. The classis Rider-Waite Tarot Deck, in my humble opinion, is the most comprehensive system in terms of design, story-telling, and astrological importance. This deck of card was originated in the mid-15th century in Northern Italy as game cards. Only more recently did it evolve into a tool of fortune telling and divination as most people know it today. There is a standard set of interpretation for each card, but each reader is encouraged to attached his/her own interpretations. In fact, if well-trained, everyone can design a deck of tarot card that can accurately tell stories.</p>
+  <p> There are so many decks of tarot cards in the market nowadays, with each deck serving its own purposes. The Rider-Waite Tarot Deck, in my opinion, is the most comprehensive one in terms of design, story-telling, and astrological importance. This deck of card was originated in the mid-15th century in Northern Italy for card games. Only more recently did it evolve into a tool of fortune telling and divination as most people know it today. There is a standard set of interpretation for each card, but each reader is encouraged to add a personal spin. In fact, if well-trained, everyone can design a deck of tarot cards.</p>
   <h3>Why does it work? 🔮</h3>
   <p>When a practitioner formulates a question, the card drawn reflects a frequency that aligns with the frequency of practitioner's question. The same principal applies to other fortune telling methods and tools in other cultures. </p>
 </main>
