--- a/public/stylesheets/pastReadings/index.css
+++ b/public/stylesheets/pastReadings/index.css
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  background-color: lightgray;
+  background-color:rgb(223,198,204);
   /* Use a system font, if none are available use an available sans-sarif font */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
         Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
@@ -26,59 +26,40 @@ body {
 }
 
 nav {
-  background-color: white;
-  font-size: 2.2rem;
-  display: flex;
-  justify-content: center;
-  
-}
-
-nav a:hover {
-  background-color: orange;
-}
-
-
-main {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
-h1 {
-  font-size: 3.2rem;
-}
-
-h2, h3 {
-  font-size: 3.0rem;
-}
- 
-p {
-  font-size: 2.6rem
- }
-
-form {
-  display: inline;
-}
-
-label {
+  background-color: rgb(190,149,189);
   font-size: 2.0rem;
-  display: column;
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: row;
 }
 
-element {
-  display: column;
+nav a {
+    text-decoration: none;
 }
 
-div {
-  display: inline-flex;
-  column-gap: 25%;
-  justify-content: space-between;
-  align-items: center;
-  
+
+li{
+    font-size: large;
+    list-style: none;
+    margin: 5px;
+    
 }
 
-li {
-  font-size: 2.6rem;
+button{
+    color: #0099CC; 
+    background: transparent; 
+    border: 2px solid #0099CC;
+    border-radius: 6px; 
+    padding: 5px;
+    margin: 5px;
+    height:fit-content;
+    width: fit-content;
 }
+
+button:hover {     
+    background-color: #008CBA;      
+    color: white; 
+}
+
+
 
