--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,10 +12,10 @@
 <% } %>
 
 <main>
-  <h2>About the Rider-Waite Tarot Deck 🔮</h2>
-  <p> There are so many decks of tarot cards in the market nowadays, with each deck serving its own purposes. The Rider-Waite Tarot Deck, in my opinion, is the most comprehensive one in terms of design, story-telling, and astrological importance. This deck of card was originated in the mid-15th century in Northern Italy for card games. Only more recently did it evolve into a tool of fortune telling and divination as most people know it today. There is a standard set of interpretation for each card, but each reader is encouraged to add a personal spin. In fact, if well-trained, everyone can design a deck of tarot cards.</p>
-  <h3>Why does it work? 🔮</h3>
-  <p>When a practitioner formulates a question, the card drawn reflects a frequency that aligns with the frequency of practitioner's question. The same principal applies to other fortune telling methods and tools in other cultures. </p>
+  <h2>🔮 About the Rider-Waite Tarot Deck 🔮</h2>
+  <p>There are so many tarot cards decks in the market nowadays, with each deck serving its own purposes. The Rider-Waite Tarot Deck, in my opinion, is the most comprehensive one in terms of design, story-telling, and astrological importance. This deck of card was originated in the mid-15th century in Northern Italy for card games. Only more recently did it evolve into a tool of fortune telling and divination as most people know it today. There is a standard set of interpretation for each card, but each reader is encouraged to add a personal spin. In fact, if well-trained, everyone can design a deck of tarot cards.</p>
+  <h3>🔮 Why does it work? 🔮</h3>
+  <p>Think about it in terms of frequencies. When a practitioner formulates a question, the card drawn reflects a frequency that aligns with the frequency of practitioner's question. The same principal applies to other fortune telling methods and tools in other cultures. </p>
 </main>
 
 <%- include('./partials/footer') %>
