--- a/views/newReading/index.ejs
+++ b/views/newReading/index.ejs
@@ -18,8 +18,7 @@
   <% if (user) { %>
   <form action="/newReading/result" method="POST">
     <label>
-      <textarea placeholder="Enter your questions/concerns here" rows="4" cols="50" type="text" name="question" required> 
-      </textarea>
+      <textarea placeholder="Enter your questions/concerns here" rows="4" cols="50" type="text" name="question" required></textarea> 
     </label>
     <button id="shuffleButton" type="submit">Shuffle</button>
   </form>
