--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -17,12 +17,10 @@
 </head>
 <body>
     <nav>
-      <i class="fas fa-meteor fa-2x"></i>
       <a href="/">Home</a>
-      <a href="/newReading">Get a New Rading</a>
+      <a href="/newReading">Get a New Reading</a>
       <a href="/pastReadings">My Past Readings</a>
 
-    
     </nav>
 
     
