--- a/public/stylesheets/newReading/index.css
+++ b/public/stylesheets/newReading/index.css
@@ -38,8 +38,10 @@ nav a {
 }
 
 h1 {
-  margin-top: 30px;
   font-size: 2.0rem;
+  margin-top: 40px;
+  color:rgb(39,8,29);
+  font-weight: 400;
 }
 
 div {
@@ -51,18 +53,22 @@ div {
 }
 
 p {
-    font-size: small;
+  font-size: 1.8rem;
+  color:rgb(39,8,29);
+  font-weight: 250;
 }
 
 ul {
     list-style: none;
+    color: rgb(39,8,29);
+    font-size: 1.2rem;
+
 }
 
 form {
     display: flex;
     flex-direction: column;
 }
-
 
 textarea{
     color: #0099CC; 
@@ -81,6 +87,7 @@ textarea{
     margin-left: 45%;
     height:fit-content;
     width: fit-content;
+    margin-top: 20px;
     
 }
 
