--- a/public/stylesheets/pastReadings/index.css
+++ b/public/stylesheets/pastReadings/index.css
@@ -38,6 +38,17 @@ nav a {
 }
 
 
+ul {
+  text-align: center;
+  margin-top: 30px;
+}
+
+ul a{
+  text-decoration: none;
+  color: rgb(39,8,29);
+}
+
+
 li{
     font-size: large;
     list-style: none;
