--- a/views/pastReadings/show.ejs
+++ b/views/pastReadings/show.ejs
@@ -9,14 +9,15 @@
   <title><%= title %></title>
 </head>
 <body>
-  <h1><%= title %></h1>
-  <h2> ❔❔❔ <%= reading.question %> </h2>
+  <h1>🔮 <%= title %> 🔮</h1>
+  <h2> Question:  <%= reading.question %> </h2>
+  <h3> Previous Comments: <%= reading.comment  %> </h4>
   <div>
   <img src="/images/cards/<%= reading.card1.img %>"/style="width:30em; height:45em;" >
   <img src="/images/cards/<%= reading.card2.img %>"/style="width:30em; height:45em;" >
   <img src="/images/cards/<%= reading.card3.img %>"/style="width:30em; height:45em;" >
   </div>
-  <h3> Previous Comments: <%= reading.comment  %> </h4>
+
   <div id="buttons">
     <a href="/pastReadings/<%= reading._id %>/edit">
       <button id="editButton">Edit Comment</button>
