--- a/views/newReading/index.ejs
+++ b/views/newReading/index.ejs
@@ -1,3 +1,6 @@
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,200&display=swap');
+</style>
 <%- include('../partials/html-head') %> <%- include('../partials/nav') %>
 <link rel="stylesheet" href="/stylesheets/newReading/index.css ">
 <section>
