--- a/views/newReading/result.ejs
+++ b/views/newReading/result.ejs
@@ -1,3 +1,6 @@
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,200&display=swap');
+</style>
 <%- include('../partials/html-head') %> 
 <link rel="stylesheet" href="/stylesheets/newReading/result.css ">
 <%- include('../partials/nav') %>
