--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -19,7 +19,7 @@
     <nav>
       <a href="/">Home</a>
       <a href="/newReading">Get a New Reading</a>
-      <a href="/pastReadings">My Past Readings</a>
+      <a href="/pastReadings">Past Readings</a>
 
     </nav>
 
